# seq2stopstart

./: .gitignore  pyproject.toml  readme.md  rscape_termcheck.py  seq2startstop.pbs  seq2startstop.py
get_genbank/: get_genbank.py  readme.md
