[project]
name = "seq2stopstart"
version = "0.1.0"
description = "A pipeline for mapping genomic sequences to a BLAST database, aligning them against their reference regions, and identifying the nearest flanking gene boundaries (start or stop codons) on both sides of each alignment."
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "certifi>=2025.11.12",
    "matplotlib>=3.10.7",
]
